syntax = "proto3";

package cart;

service CartService {
  rpc GetCart (GetCartRequest) returns (GetCartResponse);
  rpc AddToCart (AddToCartRequest) returns (AddToCartResponse);
  rpc UpdateCartItem (UpdateCartItemRequest) returns (UpdateCartItemResponse);
}

message GetCartRequest {
  string userId = 1;
}

message CartItem {
  string productId = 1;
  string skuNo = 2;
  int32 quantity = 3;
  int32 stock = 4;
}

message GetCartResponse {
  repeated CartItem items = 1;
}

message AddToCartRequest {
  string userId = 1;
  CartItem item = 2;
}

message AddToCartResponse {
  bool success = 1;
  string message = 2;
}

message UpdateCartItemRequest {
  string userId = 1;
  CartItem item = 2;
}

message UpdateCartItemResponse {
  bool success = 1;
  string message = 2;
}